@startuml

class BookStore #LightGray{

}

abstract class User #LightPink{
UserName
Password
Role
}

class Cashier #LightPink{
CashierID

}

class Stocker #LightPink{
StockerID
}

class Admin #LightPink{
AdminID
}

class Book #LightBlue  {
Code
}

class BookDescription #LightBlue   {
Title
Genre
CurrntStock
PurchasedCount
}

class Transcation #LightCyan{
TransactionID
CashierID
BookCode
Date
BookList
}

class Purchase #LightCyan{
}

class Return #LightCyan{
}
class Customer #LightGray{

}



User "1" -- "1...*" Cashier #pink:has-a
User "1" -- "1...*" Stocker #pink:has-a
User "1" -- "1" Admin  #pink:has-an

Stocker "1" -- "*" Book #blue:"Updates-stock"
Admin "1" -- "1...*" Cashier #green : "Add-or-remove"
Admin "1" -- "1...*" Stocker #green: "Add-or-remove"
Cashier "1" -- "*" Transcation #orange: "Performs"
Admin "1" -- "*" Book #green: "view"
Cashier "1" -- "*" Book #orange: "view""
Book "1" -- "1" BookDescription #red: "Describes"
User"1...*" -- "1" BookStore #pink : "Member-of"
Cashier"1" -- "*" Customer #orange: "Communicates-with "
Book"*" -- "1" BookStore#red: "Owned-by"
Transcation"1" -- "1" Purchase : "Type-of"
Transcation"1" -- "1" Return : "Type-of"

skinparam class {
FontName Times New Roman
FontSize 15
 }




@enduml